turn back on footer animation, fixes scrollbar jump

--- a/src/styles/config/_base.scss
+++ b/src/styles/config/_base.scss
@@ -1,16 +1,10 @@
 html {
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 *,
 *:before,
 *:after {
   box-sizing: inherit;
-}
-
-html,
-body {
-  // height: 100%;
 }
 
 body {
